--- a/forward_problem/equations/transport_pinn.ipynb
+++ b/forward_problem/equations/transport_pinn.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-01T15:09:53.331944Z",
-     "start_time": "2025-01-01T15:09:52.167783Z"
+     "end_time": "2025-01-03T09:18:06.640626Z",
+     "start_time": "2025-01-03T09:18:06.633875Z"
     }
    },
    "cell_type": "code",
@@ -20,20 +20,20 @@
    ],
    "id": "d05e7c470be7b44e",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 22
   },
   {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-01T15:09:53.417128Z",
-     "start_time": "2025-01-01T15:09:53.355668Z"
+     "end_time": "2025-01-03T09:18:06.677908Z",
+     "start_time": "2025-01-03T09:18:06.651949Z"
     }
    },
    "cell_type": "code",
    "source": [
     "class TransportFPINN:\n",
-    "    def __init__(self, n_int, n_sb, n_tb,  lambda_u=10, n_hidden_layers=4, neurons=20, regularization_param=0., regularization_exp=2., retrain_seed=42, device='cuda' if torch.cuda.is_available() else 'cpu'):\n",
+    "    def __init__(self, n_int, n_sb, n_tb,  lambda_u=10, n_hidden_layers=4, neurons=20, retrain_seed=42, device='cuda' if torch.cuda.is_available() else 'cpu'):\n",
     "\n",
     "        self.device = device\n",
     "        self.dtype = torch.float32\n",
@@ -52,9 +52,8 @@
     "        # Generator of Sobol sequences\n",
     "        self.soboleng = torch.quasirandom.SobolEngine(dimension=self.domain_extrema.shape[0])\n",
     "        # F Dense NN to approximate the solution of the underlying heat equation\n",
-    "        self.approximate_solution = NeuralNet(input_dimension=self.domain_extrema.shape[0], output_dimension=1,\n",
-    "                  n_hidden_layers=n_hidden_layers, neurons=neurons, regularization_param=regularization_param,\n",
-    "                  regularization_exp=regularization_exp, retrain_seed=retrain_seed, device=device).to(device)\n",
+    "        self.approximate_solution = NeuralNet(input_dimension=self.domain_extrema.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers, neurons=neurons, retrain_seed=retrain_seed, device=device).to(device)\n",
+    "\n",
     "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
     "        self.c = 1.0\n",
@@ -394,7 +393,7 @@
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 23
   },
   {
    "metadata": {},
@@ -405,8 +404,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-01T15:09:53.425691Z",
-     "start_time": "2025-01-01T15:09:53.420953Z"
+     "end_time": "2025-01-03T09:18:06.695916Z",
+     "start_time": "2025-01-03T09:18:06.689001Z"
     }
    },
    "cell_type": "code",
@@ -416,17 +415,17 @@
     "    early_stopping_patience=20,\n",
     "    max_iter=100,\n",
     ")\n",
-    "pde = TransportFPINN(n_int=256, n_sb=64, n_tb=64)"
+    "pde = TransportFPINN(n_int=256, n_sb=64, n_tb=64, n_hidden_layers=3)"
    ],
    "id": "ebac1aa33589d48c",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-01T15:09:53.662814Z",
-     "start_time": "2025-01-01T15:09:53.431902Z"
+     "end_time": "2025-01-03T09:18:06.961106Z",
+     "start_time": "2025-01-03T09:18:06.711953Z"
     }
    },
    "cell_type": "code",
@@ -444,13 +443,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 4
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-01T15:10:09.363440Z",
-     "start_time": "2025-01-01T15:09:53.672252Z"
+     "end_time": "2025-01-03T09:18:22.979743Z",
+     "start_time": "2025-01-03T09:18:06.977537Z"
     }
    },
    "cell_type": "code",
@@ -505,17 +504,17 @@
       "Total Loss: -1.248030 | Boundary Loss: -2.523323 | PDE Loss: -1.576420 | LR: 5.000000e-01\n",
       "\n",
       "Training completed. Final loss: -1.248030\n",
-      "Time taken:  15.68819260597229\n"
+      "Time taken:  15.997037172317505\n"
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-01T15:10:09.557703Z",
-     "start_time": "2025-01-01T15:10:09.369283Z"
+     "end_time": "2025-01-03T09:18:23.143004Z",
+     "start_time": "2025-01-03T09:18:22.991094Z"
     }
    },
    "cell_type": "code",
@@ -533,13 +532,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 6
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-01T15:10:11.841067Z",
-     "start_time": "2025-01-01T15:10:09.568551Z"
+     "end_time": "2025-01-03T09:18:25.458974Z",
+     "start_time": "2025-01-03T09:18:23.148598Z"
     }
    },
    "cell_type": "code",
@@ -564,7 +563,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 7
+   "execution_count": 28
   }
  ],
  "metadata": {
