--- a/inverse_problem/inverse_pinn.ipynb
+++ b/inverse_problem/inverse_pinn.ipynb
@@ -25,15 +25,17 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "class ForwardPINN(ABC):\n",
-    "    def __init__(self, n_int, n_sb, n_tb, lambda_u=10, n_hidden_layers=4, neurons=20, retrain_seed=42, device='cuda' if torch.cuda.is_available() else 'cpu'):\n",
+    "class InversePINN(ABC):\n",
+    "    def __init__(self, n_int, n_sb, n_tb, n_meas, lambda_u=10, n_hidden_layers=4, neurons=20, lambda_m=10, n_hidden_layers_cf=4, neurons_cf=20, retrain_seed=42, device='cuda' if torch.cuda.is_available() else 'cpu'):\n",
     "\n",
     "        self.device = device\n",
     "        self.dtype = torch.float32\n",
     "\n",
+    "\n",
     "        self.n_int = n_int\n",
     "        self.n_sb = n_sb\n",
     "        self.n_tb = n_tb\n",
+    "        self.n_meas = n_meas\n",
     "\n",
     "        # Extrema of the solution domain (t,x)\n",
     "        time_domain, space_domain = [0, 1], [0, 1]\n",
@@ -41,11 +43,16 @@
     "\n",
     "        # Parameter to balance the role of data and PDE\n",
     "        self.lambda_u = lambda_u\n",
+    "\n",
+    "        # Parameter to balance the role of measurement data and PDE\n",
+    "        self.lambda_m = lambda_m\n",
+    "\n",
     "        # Generator of Sobol sequences\n",
     "        self.soboleng = torch.quasirandom.SobolEngine(dimension=self.domain_extrema.shape[0])\n",
     "        # F Dense NN to approximate the solution of the underlying heat equation\n",
     "        self.approximate_solution = NeuralNet(input_dimension=self.domain_extrema.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers, neurons=neurons, retrain_seed=retrain_seed, device=device).to(device)\n",
     "\n",
+    "        self.approximate_coefficient = NeuralNet(input_dimension=self.domain_extrema.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers_cf, neurons=neurons_cf, retrain_seed=retrain_seed, device=device).to(device)\n",
     "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
     "\n",
@@ -69,6 +76,10 @@
     "\n",
     "    @abstractmethod\n",
     "    def exact_solution(self, inputs):\n",
+    "        pass\n",
+    "\n",
+    "    @abstractmethod\n",
+    "    def exact_coefficient(self, inputs):\n",
     "        pass\n",
     "\n",
     "    @abstractmethod\n",
@@ -119,6 +130,16 @@
     "        return input_int, output_int\n",
     "\n",
     "\n",
+    "    def get_measurement_data(self):\n",
+    "        torch.random.manual_seed(42)\n",
+    "        t = torch.linspace(0, self.domain_extrema[0, 1], self.n_meas)\n",
+    "        x = torch.linspace(self.domain_extrema[1, 0], self.domain_extrema[1, 1], self.n_meas)\n",
+    "        input_meas = torch.cartesian_prod(t, x)\n",
+    "        input_meas = input_meas.to(self.dtype).to(self.device)\n",
+    "        output_meas = self.exact_solution(input_meas).reshape(-1,1)\n",
+    "        output_meas = output_meas.to(self.dtype).to(self.device)\n",
+    "        return input_meas, output_meas\n",
+    "\n",
     "    # Function returning the training sets S_sb, S_tb, S_int as dataloader\n",
     "    def assemble_datasets(self):\n",
     "        input_sb_left, output_sb_left = self.add_spatial_boundary_points_left()\n",
@@ -152,7 +173,7 @@
     "    def optimizer_LBFGS(self, config):\n",
     "        \"\"\"Create LBFGS optimizer with specified configuration.\"\"\"\n",
     "        return torch.optim.LBFGS(\n",
-    "            self.approximate_solution.parameters(),\n",
+    "            list(self.approximate_solution.parameters())+list(self.approximate_coefficient.parameters()),\n",
     "            lr=float(config.lr),\n",
     "            max_iter=config.max_iter,\n",
     "            max_eval=config.max_eval,\n",
@@ -161,12 +182,14 @@
     "        )\n",
     "\n",
     "    def optimizer_ADAM(self, lr=1e-5):\n",
-    "        return torch.optim.Adam(self.approximate_solution.parameters(), lr=float(lr))\n",
+    "        return torch.optim.Adam(list(self.approximate_solution.parameters())+list(self.approximate_coefficient.parameters()), lr=float(lr))\n",
     "\n",
     "# Function to compute the total loss (weighted sum of spatial boundary loss, temporal boundary loss and interior loss)\n",
     "    def compute_loss(self, train_points):\n",
     "        (inp_train_sb_left, u_train_sb_left, inp_train_sb_right, u_train_sb_right,\n",
     "         inp_train_tb, u_train_tb, inp_train_int) = train_points\n",
+    "        inp_train_meas, u_train_meas = self.get_measurement_data()\n",
+    "        u_pred_meas = self.approximate_solution(inp_train_meas)\n",
     "\n",
     "        # Compute boundary predictions\n",
     "        u_pred_sb_left = self.apply_boundary_conditions_left(inp_train_sb_left)\n",
@@ -183,20 +206,22 @@
     "        r_sb_left = u_train_sb_left - u_pred_sb_left\n",
     "        r_sb_right = u_train_sb_right - u_pred_sb_right\n",
     "        r_tb = u_train_tb - u_pred_tb\n",
+    "        r_meas = u_train_meas - u_pred_meas\n",
     "\n",
     "        # Compute individual losses\n",
     "        loss_sb_left = self.ms(r_sb_left)\n",
     "        loss_sb_right = self.ms(r_sb_right)\n",
     "        loss_tb = self.ms(r_tb)\n",
     "        loss_int = self.ms(r_int)\n",
+    "        loss_meas = self.ms(r_meas)\n",
     "\n",
     "        # Compute boundary loss\n",
     "        loss_u = loss_sb_left + loss_tb + loss_sb_right\n",
     "\n",
     "        # Total loss with log scaling\n",
-    "        loss = torch.log10(self.lambda_u * loss_u + loss_int)\n",
+    "        loss = torch.log10(self.lambda_u * loss_u + loss_int + self.lambda_m * loss_meas)\n",
     "\n",
-    "        return loss, loss_u, loss_int\n",
+    "        return loss, loss_u, loss_int, loss_meas\n",
     "\n",
     "    def enhanced_fit(self, num_epochs, optimizer, config=None, verbose=True):\n",
     "        if config is None:\n",
@@ -206,6 +231,7 @@
     "            'total_loss': [],\n",
     "            'pde_loss': [],\n",
     "            'boundary_loss': [],\n",
+    "            'coefficient_loss': [],\n",
     "            'learning_rate': []\n",
     "        }\n",
     "\n",
@@ -250,13 +276,14 @@
     "\n",
     "                    train_points = (inp_train_sb_left, u_train_sb_left, inp_train_sb_right, u_train_sb_right, inp_train_tb, u_train_tb, inp_train_int)\n",
     "\n",
-    "                    loss, loss_u, loss_int = self.compute_loss(train_points)\n",
+    "                    loss, loss_u, loss_int, loss_meas = self.compute_loss(train_points)\n",
     "                    loss.backward()\n",
     "\n",
     "                    epoch_losses.append({\n",
     "                        'total': loss.item(),\n",
     "                        'pde': torch.log10(loss_int).item(),\n",
-    "                        'boundary': torch.log10(loss_u).item()\n",
+    "                        'boundary': torch.log10(loss_u).item(),\n",
+    "                        'coefficient': torch.log10(loss_meas).item()\n",
     "                    })\n",
     "\n",
     "                    return loss\n",
@@ -271,13 +298,14 @@
     "            # Calculate average losses\n",
     "            avg_losses = {\n",
     "                k: np.mean([loss[k] for loss in epoch_losses])\n",
-    "                for k in ['total', 'pde', 'boundary']\n",
+    "                for k in ['total', 'pde', 'boundary', 'coefficient']\n",
     "            }\n",
     "\n",
     "            # Update history\n",
     "            history['total_loss'].append(avg_losses['total'])\n",
     "            history['pde_loss'].append(avg_losses['pde'])\n",
     "            history['boundary_loss'].append(avg_losses['boundary'])\n",
+    "            history['coefficient_loss'].append(avg_losses['coefficient'])\n",
     "            history['learning_rate'].append(optimizer.param_groups[0]['lr'])\n",
     "\n",
     "            # Update scheduler\n",
@@ -289,6 +317,7 @@
     "                print(f\"Total Loss: {avg_losses['total']:.6f} | \"\n",
     "                      f\"Boundary Loss: {avg_losses['boundary']:.6f} | \"\n",
     "                      f\"PDE Loss: {avg_losses['pde']:.6f} | \"\n",
+    "                      f\"Coefficient Loss: {avg_losses['coefficient']:.6f} | \"\n",
     "                      f\"LR: {optimizer.param_groups[0]['lr']:.6e}\")\n",
     "\n",
     "            # Early stopping\n",
@@ -303,20 +332,32 @@
     "\n",
     "        return history\n",
     "    ################################################################################################\n",
-    "    def relative_L2_error(self, n_points=10000):\n",
+    "    def get_pde_points(self, n_points):\n",
     "        inputs = self.soboleng.draw(n_points)\n",
     "        inputs = self.convert(inputs)\n",
-    "\n",
     "        output = self.approximate_solution(inputs).reshape(-1, )\n",
     "        exact_output = self.exact_solution(inputs).reshape(-1, )\n",
+    "        return inputs, output, exact_output\n",
     "\n",
+    "    def get_coefficient_points(self, n_points):\n",
+    "        inputs = self.soboleng.draw(n_points)\n",
+    "        inputs = self.convert(inputs)\n",
+    "        output = self.approximate_coefficient(inputs).reshape(-1, )\n",
+    "        exact_output = self.exact_coefficient(inputs).reshape(-1, )\n",
+    "        return inputs, output, exact_output\n",
+    "\n",
+    "    def relative_L2_error(self, n_points=10000, function='pde'):\n",
+    "        if function == 'pde':\n",
+    "            inputs, output, exact_output = self.get_pde_points(n_points)\n",
+    "        else:\n",
+    "            inputs, output, exact_output = self.get_coefficient_points(n_points)\n",
     "        err = (torch.mean((output - exact_output) ** 2) / torch.mean(exact_output ** 2)) ** 0.5\n",
-    "        # print in scientific notation the L2 norm i.e. 1.234 x 10^-2\n",
+    "        print(f'{function} loss:')\n",
     "        print('L2 Relative Error Norm: {:.6e}'.format(err.item()))\n",
     "        return inputs, output, exact_output\n",
     "\n",
-    "    def plotting_solution(self, n_points=100000):\n",
-    "        inputs, output, exact_output = self.relative_L2_error(n_points)\n",
+    "    def plotting_solution(self, n_points=50000, function='pde'):\n",
+    "        inputs, output, exact_output = self.relative_L2_error(n_points, function)\n",
     "        inputs = inputs.cpu()\n",
     "        output = output.cpu()\n",
     "        exact_output = exact_output.cpu()\n",
@@ -331,6 +372,7 @@
     "        axs[1].set_ylabel('t')\n",
     "        plt.colorbar(im2, ax=axs[1])\n",
     "        axs[1].grid(True, which='both', ls=':')\n",
+    "        title = 'Solution' if function == 'pde' else 'Coefficient'\n",
     "        axs[0].set_title('Exact Solution')\n",
     "        axs[1].set_title('Approximate Solution')\n",
     "\n",
@@ -343,17 +385,20 @@
     "        input_sb_right_, _= self.add_spatial_boundary_points_right()\n",
     "        input_tb_, _ = self.add_temporal_boundary_points()\n",
     "        input_int_, _ = self.add_interior_points()\n",
+    "        input_meas_, output_meas_ = self.get_measurement_data()\n",
     "\n",
     "        input_sb_left_ = copy.deepcopy(input_sb_left).cpu()\n",
     "        input_sb_right_ = copy.deepcopy(input_sb_right_).cpu()\n",
     "        input_tb_ = copy.deepcopy(input_tb_).cpu()\n",
     "        input_int_ = copy.deepcopy(input_int_).cpu()\n",
+    "        input_meas_ = copy.deepcopy(input_meas_).cpu()\n",
     "\n",
     "        plt.figure(figsize=(16, 8), dpi=150)\n",
     "        plt.scatter(input_sb_left_[:, 1].detach().numpy(), input_sb_left_[:, 0].detach().numpy(), label='Left Boundary Points')\n",
     "        plt.scatter(input_sb_right_[:, 1].detach().numpy(), input_sb_right_[:, 0].detach().numpy(), label='Right Boundary Points')\n",
     "        plt.scatter(input_int_[:, 1].detach().numpy(), input_int_[:, 0].detach().numpy(), label='Interior Points')\n",
     "        plt.scatter(input_tb_[:, 1].detach().numpy(), input_tb_[:, 0].detach().numpy(), label='Initial Points')\n",
+    "        plt.scatter(input_meas_[:, 1].detach().numpy(), input_meas_[:, 0].detach().numpy(), label='Measurement Points')\n",
     "        plt.xlabel('x')\n",
     "        plt.ylabel('t')\n",
     "        plt.legend()\n",
@@ -361,6 +406,7 @@
     "\n",
     "    @staticmethod\n",
     "    def plot_train_loss(hist):\n",
+    "        hist = hist['total_loss']\n",
     "        plt.figure(dpi=150)\n",
     "        plt.grid(True, which=\"both\", ls=\":\")\n",
     "        plt.plot(np.arange(1, len(hist) + 1), hist, label=\"Train Loss\")\n",
