save plots and configuration

--- a/forward_problem/equations/wave_pinn.ipynb
+++ b/forward_problem/equations/wave_pinn.ipynb
@@ -8,136 +8,23 @@
    },
    "cell_type": "code",
    "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
+    "import copy\n",
+    "import json\n",
     "import os\n",
-    "os.environ['KMP_DUPLICATE_LIB_OK'] = 'True'\n",
+    "import time\n",
+    "from datetime import datetime\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import torch\n",
     "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
     "from torch.utils.data import DataLoader\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import copy\n",
-    "import time"
+    "\n",
+    "from Common import NeuralNet, TrainingConfig, EarlyStopping"
    ],
    "id": "d05e7c470be7b44e",
    "outputs": [],
    "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "class NeuralNet(nn.Module):\n",
-    "    def __init__(self, input_dimension, output_dimension, n_hidden_layers, neurons, retrain_seed, device):\n",
-    "        super(NeuralNet, self).__init__()\n",
-    "\n",
-    "        self.device = device\n",
-    "        self.dtype = torch.float64\n",
-    "        self.input_dimension = input_dimension\n",
-    "        self.output_dimension = output_dimension\n",
-    "        self.neurons = neurons\n",
-    "        self.n_hidden_layers = n_hidden_layers\n",
-    "        self.activation = nn.Tanh()\n",
-    "        # self.regularization_param = regularization_param\n",
-    "        # self.regularization_exp = regularization_exp\n",
-    "        self.retrain_seed = retrain_seed\n",
-    "\n",
-    "        # Move layers to a specified device\n",
-    "        self.input_layer = nn.Linear(self.input_dimension, self.neurons).to(self.dtype).to(device)\n",
-    "        self.hidden_layers = nn.ModuleList([\n",
-    "            nn.Linear(self.neurons, self.neurons).to(self.dtype).to(device)\n",
-    "            for _ in range(n_hidden_layers)\n",
-    "        ])\n",
-    "        self.output_layer = nn.Linear(self.neurons, self.output_dimension).to(self.dtype).to(device)\n",
-    "\n",
-    "        self.init_xavier()\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = x.to(self.dtype).to(self.device)\n",
-    "        x = self.activation(self.input_layer(x))\n",
-    "        for layer in self.hidden_layers:\n",
-    "            x = self.activation(layer(x))\n",
-    "        return self.output_layer(x)\n",
-    "\n",
-    "    def init_xavier(self):\n",
-    "        torch.manual_seed(self.retrain_seed)\n",
-    "\n",
-    "        def init_weights(m):\n",
-    "            if type(m) == nn.Linear and m.weight.requires_grad and m.bias.requires_grad:\n",
-    "                g = nn.init.calculate_gain('tanh')\n",
-    "                torch.nn.init.xavier_uniform_(m.weight, gain=g)\n",
-    "                m.bias.data.fill_(0)\n",
-    "                # Move initialized weights to device\n",
-    "                m.weight.data = m.weight.data.to(self.dtype).to(self.device)\n",
-    "                m.bias.data = m.bias.data.to(self.dtype).to(self.device)\n",
-    "\n",
-    "        self.apply(init_weights)\n",
-    "\n",
-    "    # def regularization(self):\n",
-    "    #     reg_loss = 0\n",
-    "    #     for name, param in self.named_parameters():\n",
-    "    #         if 'weight' in name:\n",
-    "    #             reg_loss = reg_loss + torch.norm(param, self.regularization_exp)\n",
-    "    #     return self.regularization_param * reg_loss\n",
-    "\n",
-    "\n",
-    "class EarlyStopping:\n",
-    "    def __init__(self, patience, min_delta=1e-6):\n",
-    "        self.patience = patience\n",
-    "        self.min_delta = min_delta\n",
-    "        self.counter = 0\n",
-    "        self.best_loss = None\n",
-    "        self.best_state = None\n",
-    "        self.should_stop = False\n",
-    "\n",
-    "    def __call__(self, model, loss):\n",
-    "        if self.best_loss is None:\n",
-    "            self.best_loss = loss\n",
-    "            # Store state on CPU to avoid memory issues\n",
-    "            self.best_state = {k: v.cpu().clone() for k, v in model.state_dict().items()}\n",
-    "        elif loss > self.best_loss - self.min_delta:\n",
-    "            self.counter += 1\n",
-    "            if self.counter >= self.patience:\n",
-    "                self.should_stop = True\n",
-    "        else:\n",
-    "            self.best_loss = loss\n",
-    "            self.best_state = {k: v.cpu().clone() for k, v in model.state_dict().items()}\n",
-    "            self.counter = 0\n",
-    "        return self.should_stop\n",
-    "\n",
-    "    def restore_best_weights(self, model):\n",
-    "        if self.best_state is not None:\n",
-    "            # Move state dict to model's device before loading\n",
-    "            device = next(model.parameters()).to(torch.float64).device\n",
-    "            state_dict = {k: v.to(torch.float64).to(device) for k, v in self.best_state.items()}\n",
-    "            model.load_state_dict(state_dict)\n",
-    "\n",
-    "\n",
-    "from dataclasses import dataclass\n",
-    "\n",
-    "\n",
-    "@dataclass\n",
-    "class TrainingConfig:\n",
-    "    num_epochs: int\n",
-    "    lambda_u: float = 10.0\n",
-    "    early_stopping_patience: int = 10\n",
-    "    early_stopping_min_delta: float = 1e-6\n",
-    "    scheduler_patience: int = 5\n",
-    "    scheduler_factor: float = 0.5\n",
-    "    scheduler_min_lr: float = 1e-6\n",
-    "    validation_fraction: float = 0.1\n",
-    "\n",
-    "    # LBFGS specific\n",
-    "    max_iter: int = 1000\n",
-    "    max_eval: int = None\n",
-    "    lr: float = 0.5\n",
-    "    history_size: int = 50\n",
-    "    line_search_fn: str = 'strong_wolfe'"
-   ],
-   "id": "9cf1bb8a488d1bb5"
   },
   {
    "metadata": {
@@ -174,12 +61,33 @@
     "\n",
     "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
+    "        # Create directory to save plots\n",
+    "        path = os.path.join('/Users/omar/Desktop/Thesis/plots', self.__class__.__name__, datetime.now().strftime('%Y-%m-%d %H:%M:%S'))\n",
+    "        os.makedirs(path)\n",
+    "        self.path = path\n",
     "\n",
     "    # Function to linearly transform a tensor whose value is between 0 and 1\n",
     "    # to a tensor whose values are between the domain extrema\n",
     "    def convert(self, tens):\n",
     "        assert (tens.shape[1] == self.domain_extrema.shape[0])\n",
     "        return tens * (self.domain_extrema[:, 1] - self.domain_extrema[:, 0]) + self.domain_extrema[:, 0]\n",
+    "\n",
+    "    def save_config(self, optimizer):\n",
+    "        class_config = {\n",
+    "            'n_int': self.n_int,\n",
+    "            'n_sb': self.n_sb,\n",
+    "            'n_tb': self.n_tb,\n",
+    "            'lambda_u': self.lambda_u,\n",
+    "            'n_hidden_layers': self.approximate_solution.n_hidden_layers,\n",
+    "            'neurons': self.approximate_solution.neurons,\n",
+    "            'retrain_seed': self.approximate_solution.retrain_seed,\n",
+    "            'device': self.device,\n",
+    "            'optimizer_config': optimizer.defaults\n",
+    "        }\n",
+    "        # Save configuration in json file\n",
+    "        with open(f'{self.path}/config.json', 'w') as f:\n",
+    "            json.dump(class_config, f)\n",
+    "\n",
     "\n",
     "    def exact_solution(self, inputs):\n",
     "        t = inputs[:, 0]\n",
@@ -346,6 +254,9 @@
     "        if config is None:\n",
     "            config = TrainingConfig(num_epochs=num_epochs)\n",
     "\n",
+    "        # Save configuration\n",
+    "        self.save_config(optimizer)\n",
+    "\n",
     "        history = {\n",
     "            'total_loss': [],\n",
     "            'pde_loss': [],\n",
@@ -457,6 +368,8 @@
     "        err = (torch.mean((output - exact_output) ** 2) / torch.mean(exact_output ** 2)) ** 0.5\n",
     "        # print in scientific notation the L2 norm i.e. 1.234 x 10^-2\n",
     "        print('L2 Relative Error Norm: {:.6e}'.format(err.item()))\n",
+    "        with open(f'{self.path}/relative_error.txt', 'a') as f:\n",
+    "            f.write('L2 Relative Error Norm: {:.6e}\\n'.format(err.item()))\n",
     "        return inputs, output, exact_output\n",
     "\n",
     "    def plotting_solution(self, n_points=100000):\n",
@@ -477,7 +390,7 @@
     "        axs[1].grid(True, which='both', ls=':')\n",
     "        axs[0].set_title('Exact Solution')\n",
     "        axs[1].set_title('Approximate Solution')\n",
-    "\n",
+    "        plt.savefig(f'{self.path}/solution.png')\n",
     "        plt.show()\n",
     "        plt.close()\n",
     "\n",
@@ -501,11 +414,11 @@
     "        plt.xlabel('x')\n",
     "        plt.ylabel('t')\n",
     "        plt.legend()\n",
+    "        plt.savefig(f'{self.path}/training_points.png')\n",
     "        plt.show()\n",
     "\n",
-    "    @staticmethod\n",
-    "    def plot_train_loss(hist):\n",
-    "        hist = hist['total_loss']\n",
+    "\n",
+    "    def plot_train_loss(self, hist):\n",
     "        plt.figure(dpi=150)\n",
     "        plt.grid(True, which=\"both\", ls=\":\")\n",
     "        plt.plot(np.arange(1, len(hist) + 1), hist, label=\"Train Loss\")\n",
@@ -513,7 +426,8 @@
     "        plt.xlabel(\"Epoch\")\n",
     "        plt.ylabel('Log10 Loss')\n",
     "        plt.legend()\n",
-    "        plt.show()\n"
+    "        plt.savefig(f'{self.path}/train_loss.png')\n",
+    "        plt.show()"
    ],
    "id": "initial_id",
    "outputs": [],
