--- a/forward_problem/forward_pinn.ipynb
+++ b/forward_problem/forward_pinn.ipynb
@@ -6,14 +6,19 @@
    "outputs": [],
    "execution_count": null,
    "source": [
+    "import copy\n",
+    "import json\n",
+    "import os\n",
+    "from abc import ABC, abstractmethod\n",
+    "from datetime import datetime\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import torch\n",
     "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
     "from torch.utils.data import DataLoader\n",
-    "from Common import NeuralNet, TrainingConfig, EarlyStopping\n",
-    "from abc import ABC, abstractmethod\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import copy"
+    "\n",
+    "from Common import NeuralNet, TrainingConfig, EarlyStopping"
    ],
    "id": "d05e7c470be7b44e"
   },
@@ -46,14 +51,34 @@
     "        # F Dense NN to approximate the solution of the underlying heat equation\n",
     "        self.approximate_solution = NeuralNet(input_dimension=self.domain_extrema.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers, neurons=neurons, retrain_seed=retrain_seed, device=device).to(device)\n",
     "\n",
-    "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
+    "\n",
+    "        # Create directory to save plots\n",
+    "        path = os.path.join('/Users/omar/Desktop/Thesis/plots', self.__class__.__name__, datetime.now().strftime('%Y-%m-%d %H:%M:%S'))\n",
+    "        os.makedirs(path)\n",
+    "        self.path = path\n",
     "\n",
     "    # Function to linearly transform a tensor whose value is between 0 and 1\n",
     "    # to a tensor whose values are between the domain extrema\n",
     "    def convert(self, tens):\n",
     "        assert (tens.shape[1] == self.domain_extrema.shape[0])\n",
     "        return tens * (self.domain_extrema[:, 1] - self.domain_extrema[:, 0]) + self.domain_extrema[:, 0]\n",
+    "\n",
+    "    def save_config(self, optimizer):\n",
+    "        class_config = {\n",
+    "            'n_int': self.n_int,\n",
+    "            'n_sb': self.n_sb,\n",
+    "            'n_tb': self.n_tb,\n",
+    "            'lambda_u': self.lambda_u,\n",
+    "            'n_hidden_layers': self.approximate_solution.n_hidden_layers,\n",
+    "            'neurons': self.approximate_solution.neurons,\n",
+    "            'retrain_seed': self.approximate_solution.retrain_seed,\n",
+    "            'device': self.device,\n",
+    "            'optimizer_config': optimizer.defaults\n",
+    "        }\n",
+    "        # Save configuration in json file\n",
+    "        with open(f'{self.path}/config.json', 'w') as f:\n",
+    "            json.dump(class_config, f)\n",
     "\n",
     "    @abstractmethod\n",
     "    def initial_condition(self, x):\n",
@@ -202,6 +227,9 @@
     "        if config is None:\n",
     "            config = TrainingConfig(num_epochs=num_epochs)\n",
     "\n",
+    "        # Save configuration\n",
+    "        self.save_config(optimizer)\n",
+    "\n",
     "        history = {\n",
     "            'total_loss': [],\n",
     "            'pde_loss': [],\n",
@@ -313,6 +341,8 @@
     "        err = (torch.mean((output - exact_output) ** 2) / torch.mean(exact_output ** 2)) ** 0.5\n",
     "        # print in scientific notation the L2 norm i.e. 1.234 x 10^-2\n",
     "        print('L2 Relative Error Norm: {:.6e}'.format(err.item()))\n",
+    "        with open(f'{self.path}/relative_error.txt', 'a') as f:\n",
+    "            f.write('L2 Relative Error Norm: {:.6e}\\n'.format(err.item()))\n",
     "        return inputs, output, exact_output\n",
     "\n",
     "    def plotting_solution(self, n_points=100000):\n",
@@ -333,7 +363,7 @@
     "        axs[1].grid(True, which='both', ls=':')\n",
     "        axs[0].set_title('Exact Solution')\n",
     "        axs[1].set_title('Approximate Solution')\n",
-    "\n",
+    "        plt.savefig(f'{self.path}/solution.png')\n",
     "        plt.show()\n",
     "        plt.close()\n",
     "\n",
@@ -357,10 +387,11 @@
     "        plt.xlabel('x')\n",
     "        plt.ylabel('t')\n",
     "        plt.legend()\n",
+    "        plt.savefig(f'{self.path}/training_points.png')\n",
     "        plt.show()\n",
     "\n",
-    "    @staticmethod\n",
-    "    def plot_train_loss(hist):\n",
+    "\n",
+    "    def plot_train_loss(self, hist):\n",
     "        plt.figure(dpi=150)\n",
     "        plt.grid(True, which=\"both\", ls=\":\")\n",
     "        plt.plot(np.arange(1, len(hist) + 1), hist, label=\"Train Loss\")\n",
@@ -368,6 +399,7 @@
     "        plt.xlabel(\"Epoch\")\n",
     "        plt.ylabel('Log10 Loss')\n",
     "        plt.legend()\n",
+    "        plt.savefig(f'{self.path}/train_loss.png')\n",
     "        plt.show()\n"
    ],
    "id": "initial_id"
