--- a/inverse_problem/equations/heat_pinn.ipynb
+++ b/inverse_problem/equations/heat_pinn.ipynb
@@ -9,14 +9,19 @@
    },
    "cell_type": "code",
    "source": [
+    "import copy\n",
+    "import json\n",
+    "import os\n",
+    "import time\n",
+    "from datetime import datetime\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import torch\n",
     "from torch.optim.lr_scheduler import ReduceLROnPlateau\n",
     "from torch.utils.data import DataLoader\n",
-    "from Common import NeuralNet, TrainingConfig, EarlyStopping\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import copy\n",
-    "import time"
+    "\n",
+    "from Common import NeuralNet, EarlyStopping, TrainingConfig"
    ],
    "id": "d05e7c470be7b44e",
    "outputs": [],
@@ -62,12 +67,36 @@
     "        self.approximate_coefficient = NeuralNet(input_dimension=self.domain_extrema.shape[0], output_dimension=1, n_hidden_layers=n_hidden_layers_cf, neurons=neurons_cf, retrain_seed=retrain_seed, device=device).to(device)\n",
     "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
+    "        # Create directory to save plots\n",
+    "        path = os.path.join('/Users/omar/Desktop/Thesis/plots', self.__class__.__name__, datetime.now().strftime('%Y-%m-%d %H:%M:%S'))\n",
+    "        os.makedirs(path)\n",
+    "        self.path = path\n",
     "\n",
     "    # Function to linearly transform a tensor whose value is between 0 and 1\n",
     "    # to a tensor whose values are between the domain extrema\n",
     "    def convert(self, tens):\n",
     "        assert (tens.shape[1] == self.domain_extrema.shape[0])\n",
     "        return tens * (self.domain_extrema[:, 1] - self.domain_extrema[:, 0]) + self.domain_extrema[:, 0]\n",
+    "\n",
+    "    def save_config(self, optimizer):\n",
+    "        class_config = {\n",
+    "            'n_int': self.n_int,\n",
+    "            'n_sb': self.n_sb,\n",
+    "            'n_tb': self.n_tb,\n",
+    "            'n_meas': self.n_meas,\n",
+    "            'lambda_u': self.lambda_u,\n",
+    "            'lambda_m': self.lambda_m,\n",
+    "            'n_hidden_layers': self.approximate_solution.n_hidden_layers,\n",
+    "            'neurons': self.approximate_solution.neurons,\n",
+    "            'n_hidden_layers_cf': self.approximate_coefficient.n_hidden_layers,\n",
+    "            'neurons_cf': self.approximate_coefficient.neurons,\n",
+    "            'retrain_seed': self.approximate_solution.retrain_seed,\n",
+    "            'device': self.device,\n",
+    "            'optimizer_config': optimizer.defaults\n",
+    "        }\n",
+    "        # Save configuration in json file\n",
+    "        with open(f'{self.path}/config.json', 'w') as f:\n",
+    "            json.dump(class_config, f)\n",
     "\n",
     "    def exact_solution(self, inputs):\n",
     "        t = inputs[:, 0]\n",
@@ -248,6 +277,7 @@
     "        if config is None:\n",
     "            config = TrainingConfig(num_epochs=num_epochs)\n",
     "\n",
+    "        self.save_config(optimizer)\n",
     "        history = {\n",
     "            'total_loss': [],\n",
     "            'pde_loss': [],\n",
@@ -375,6 +405,9 @@
     "        err = (torch.mean((output - exact_output) ** 2) / torch.mean(exact_output ** 2)) ** 0.5\n",
     "        print(f'{function} loss:')\n",
     "        print('L2 Relative Error Norm: {:.6e}'.format(err.item()))\n",
+    "        with open(f'{self.path}/relative_error.txt', 'a') as f:\n",
+    "            f.write(f'{function} loss:\\n')\n",
+    "            f.write('L2 Relative Error Norm: {:.6e}\\n'.format(err.item()))\n",
     "        return inputs, output, exact_output\n",
     "\n",
     "    def plotting_solution(self, n_points=50000, function='pde'):\n",
@@ -394,9 +427,9 @@
     "        plt.colorbar(im2, ax=axs[1])\n",
     "        axs[1].grid(True, which='both', ls=':')\n",
     "        title = 'Solution' if function == 'pde' else 'Coefficient'\n",
-    "        axs[0].set_title('Exact Solution')\n",
-    "        axs[1].set_title('Approximate Solution')\n",
-    "\n",
+    "        axs[0].set_title(f'Exact {title}')\n",
+    "        axs[1].set_title(f'Approximate {title}')\n",
+    "        plt.savefig(f'{self.path}/{title}.png')\n",
     "        plt.show()\n",
     "        plt.close()\n",
     "\n",
@@ -423,10 +456,11 @@
     "        plt.xlabel('x')\n",
     "        plt.ylabel('t')\n",
     "        plt.legend()\n",
+    "        plt.savefig(f'{self.path}/training_points.png')\n",
     "        plt.show()\n",
     "\n",
-    "    @staticmethod\n",
-    "    def plot_train_loss(hist):\n",
+    "\n",
+    "    def plot_train_loss(self, hist):\n",
     "        hist = hist['total_loss']\n",
     "        plt.figure(dpi=150)\n",
     "        plt.grid(True, which=\"both\", ls=\":\")\n",
@@ -435,7 +469,8 @@
     "        plt.xlabel(\"Epoch\")\n",
     "        plt.ylabel('Log10 Loss')\n",
     "        plt.legend()\n",
-    "        plt.show()\n"
+    "        plt.savefig(f'{self.path}/train_loss.png')\n",
+    "        plt.show()"
    ],
    "id": "initial_id",
    "outputs": [],
