--- a/forward_problem/equations/heat_pinn.ipynb
+++ b/forward_problem/equations/heat_pinn.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
     "ExecuteTime": {
-     "end_time": "2025-01-03T09:14:19.447101Z",
-     "start_time": "2025-01-03T09:14:18.476045Z"
+     "start_time": "2025-01-05T12:14:19.955108Z"
     }
    },
    "cell_type": "code",
@@ -23,13 +25,13 @@
    ],
    "id": "d05e7c470be7b44e",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-01-03T09:14:19.497010Z",
+     "end_time": "2025-01-05T12:14:20.554402Z",
      "start_time": "2025-01-03T09:14:19.473299Z"
     }
    },
@@ -59,7 +61,7 @@
     "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
     "        # Create directory to save plots\n",
-    "        path = os.path.join('/Users/omar/Desktop/Thesis/plots', self.__class__.__name__, datetime.now().strftime('%Y-%m-%d %H:%M:%S'))\n",
+    "        path = os.path.join('/Users/omar/Desktop/Thesis/plots', self.__class__.__name__, datetime.now().strftime('%Y-%m-%d %H-%M-%S'))\n",
     "        os.makedirs(path)\n",
     "        self.path = path\n",
     "\n",
@@ -402,6 +404,7 @@
     "\n",
     "\n",
     "    def plot_train_loss(self, hist):\n",
+    "        hist = hist['total_loss']\n",
     "        plt.figure(dpi=150)\n",
     "        plt.grid(True, which=\"both\", ls=\":\")\n",
     "        plt.plot(np.arange(1, len(hist) + 1), hist, label=\"Train Loss\")\n",
@@ -425,7 +428,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-03T09:14:19.506683Z",
+     "end_time": "2025-01-05T12:14:20.555151Z",
      "start_time": "2025-01-03T09:14:19.500803Z"
     }
    },
@@ -445,7 +448,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-03T09:14:19.803628Z",
+     "end_time": "2025-01-05T12:14:20.558978Z",
      "start_time": "2025-01-03T09:14:19.515647Z"
     }
    },
@@ -469,7 +472,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-03T09:14:27.047401Z",
+     "end_time": "2025-01-05T12:14:20.560218Z",
      "start_time": "2025-01-03T09:14:19.817040Z"
     }
    },
@@ -485,7 +488,9 @@
     "    verbose=True\n",
     ")\n",
     "end = time.time()\n",
-    "print('Time taken: ', end - start)"
+    "print('Time taken: ', end - start)\n",
+    "with open(f'{pde.path}/time.txt', 'w') as f:\n",
+    "    f.write('Time taken: {:.6f}'.format(end - start))"
    ],
    "id": "44e2d19a72efba0d",
    "outputs": [
@@ -534,7 +539,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-03T09:14:27.248387Z",
+     "end_time": "2025-01-05T12:14:20.561328Z",
      "start_time": "2025-01-03T09:14:27.054985Z"
     }
    },
@@ -558,7 +563,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-03T09:14:29.450130Z",
+     "end_time": "2025-01-05T12:14:20.564299Z",
      "start_time": "2025-01-03T09:14:27.259375Z"
     }
    },
