--- a/inverse_problem/equations/transport_pinn.ipynb
+++ b/inverse_problem/equations/transport_pinn.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
     "        # Create directory to save plots\n",
-    "        path = os.path.join('/Users/omar/Desktop/Thesis/plots', self.__class__.__name__, datetime.now().strftime('%Y-%m-%d %H:%M:%S'))\n",
+    "        path = os.path.join('/Users/omar/Desktop/Thesis/plots', self.__class__.__name__, datetime.now().strftime('%Y-%m-%d %H-%M-%S'))\n",
     "        os.makedirs(path)\n",
     "        self.path = path\n",
     "\n",
@@ -572,7 +572,9 @@
     "    verbose=True\n",
     ")\n",
     "end = time.time()\n",
-    "print('Time taken: ', end - start)"
+    "print('Time taken: ', end - start)\n",
+    "with open(f'{pde.path}/time.txt', 'w') as f:\n",
+    "    f.write('Time taken: {:.6f}'.format(end - start))"
    ],
    "id": "62e3e1b006749d95",
    "outputs": [
