--- a/inverse_problem/inverse_pinn.ipynb
+++ b/inverse_problem/inverse_pinn.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
     "        # Create directory to save plots\n",
-    "        path = os.path.join('/Users/omar/Desktop/Thesis/plots', self.__class__.__name__, datetime.now().strftime('%Y-%m-%d %H:%M:%S'))\n",
+    "        path = os.path.join('/Users/omar/Desktop/Thesis/plots', self.__class__.__name__, datetime.now().strftime('%Y-%m-%d %H-%M-%S'))\n",
     "        os.makedirs(path)\n",
     "        self.path = path\n",
     "\n",
