--- a/forward_problem/equations/wave_pinn.ipynb
+++ b/forward_problem/equations/wave_pinn.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
     "        # Create directory to save plots\n",
-    "        path = os.path.join('/Users/omar/Desktop/Thesis/plots', self.__class__.__name__, datetime.now().strftime('%Y-%m-%d %H:%M:%S'))\n",
+    "        path = os.path.join('/Users/omar/Desktop/Thesis/plots', self.__class__.__name__, datetime.now().strftime('%Y-%m-%d %H-%M-%S'))\n",
     "        os.makedirs(path)\n",
     "        self.path = path\n",
     "\n",
@@ -419,6 +419,7 @@
     "\n",
     "\n",
     "    def plot_train_loss(self, hist):\n",
+    "        hist = hist['total_loss']\n",
     "        plt.figure(dpi=150)\n",
     "        plt.grid(True, which=\"both\", ls=\":\")\n",
     "        plt.plot(np.arange(1, len(hist) + 1), hist, label=\"Train Loss\")\n",
@@ -502,7 +503,9 @@
     "    verbose=True\n",
     ")\n",
     "end = time.time()\n",
-    "print('Time taken: ', end - start)"
+    "print('Time taken: ', end - start)\n",
+    "with open(f'{pde.path}/time.txt', 'w') as f:\n",
+    "    f.write('Time taken: {:.6f}'.format(end - start))"
    ],
    "id": "44e2d19a72efba0d",
    "outputs": [
