--- a/forward_problem/forward_pinn.ipynb
+++ b/forward_problem/forward_pinn.ipynb
@@ -54,7 +54,7 @@
     "        self.ms = lambda x: torch.mean(torch.square(x))\n",
     "\n",
     "        # Create directory to save plots\n",
-    "        path = os.path.join('/Users/omar/Desktop/Thesis/plots', self.__class__.__name__, datetime.now().strftime('%Y-%m-%d %H:%M:%S'))\n",
+    "        path = os.path.join('/Users/omar/Desktop/Thesis/plots', self.__class__.__name__, datetime.now().strftime('%Y-%m-%d %H-%M-%S'))\n",
     "        os.makedirs(path)\n",
     "        self.path = path\n",
     "\n",
@@ -392,6 +392,7 @@
     "\n",
     "\n",
     "    def plot_train_loss(self, hist):\n",
+    "        hist = hist['total_loss']\n",
     "        plt.figure(dpi=150)\n",
     "        plt.grid(True, which=\"both\", ls=\":\")\n",
     "        plt.plot(np.arange(1, len(hist) + 1), hist, label=\"Train Loss\")\n",
